--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
+    "react-oauth": "^0.0.1",
     "sweetalert2": "^11.7.28"
   },
   "devDependencies": {
